Added database connection test

--- a/tp Integrador/tp_integrador_GUI/tp_integrador_GUI.csproj
+++ b/tp Integrador/tp_integrador_GUI/tp_integrador_GUI.csproj
@@ -8,4 +8,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>dependencias\MySql.Data.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
