creacion de forms
se generaron los forms para crear las fac_proveedores

--- a/tp Integrador/tp_integrador_GUI/tp_integrador_GUI.csproj
+++ b/tp Integrador/tp_integrador_GUI/tp_integrador_GUI.csproj
@@ -15,7 +15,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="fac_proveedor\" />
+    <Compile Update="fac_proveedor\fac_notebook_crear.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
 </Project>
